logs/dag_id=fdic_ncua_staging/run_id=manual__2024-01-12T20:51:29.189854+00:00/task_id=create_staging_fdic_financials_temp/attempt=1.log
[2024-01-12T20:51:30.678+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fdic_ncua_staging.create_staging_fdic_financials_temp manual__2024-01-12T20:51:29.189854+00:00 [queued]>
[2024-01-12T20:51:30.692+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fdic_ncua_staging.create_staging_fdic_financials_temp manual__2024-01-12T20:51:29.189854+00:00 [queued]>
[2024-01-12T20:51:30.693+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-01-12T20:51:30.702+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_staging_fdic_financials_temp> on 2024-01-12 20:51:29.189854+00:00
[2024-01-12T20:51:30.707+0000] {standard_task_runner.py:60} INFO - Started process 9608 to run task
[2024-01-12T20:51:30.711+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'fdic_ncua_staging', 'create_staging_fdic_financials_temp', 'manual__2024-01-12T20:51:29.189854+00:00', '--job-id', '106', '--raw', '--subdir', 'DAGS_FOLDER/fdic-ncua-staging.py', '--cfg-path', '/tmp/tmpwc9_1y3v']
[2024-01-12T20:51:30.713+0000] {standard_task_runner.py:88} INFO - Job 106: Subtask create_staging_fdic_financials_temp
[2024-01-12T20:51:30.777+0000] {task_command.py:423} INFO - Running <TaskInstance: fdic_ncua_staging.create_staging_fdic_financials_temp manual__2024-01-12T20:51:29.189854+00:00 [running]> on host c111cf247bc6
[2024-01-12T20:51:30.825+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='fdic_ncua_staging' AIRFLOW_CTX_TASK_ID='create_staging_fdic_financials_temp' AIRFLOW_CTX_EXECUTION_DATE='2024-01-12T20:51:29.189854+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-12T20:51:29.189854+00:00'
[2024-01-12T20:51:30.826+0000] {sql.py:276} INFO - Executing: CREATE TABLE staging.fdic_financials_temp (
    -- pulling from raw.fdic_financials
    cert NUMERIC, -- FDIC Certificate Number
    name TEXT, -- `namefull`: Institution Name
    total_assets NUMERIC, -- `asset`: Total Assets
    total_deposits NUMERIC, -- `dep`: Total Deposits
    report_date TEXT, -- `repdte`: Quarterly Report Date
    dim_id TEXT PRIMARY KEY, -- MD5 hash of cert, name, total_assets, total_deposits, and report_date
    loaded_at TIMESTAMP WITH TIME ZONE -- The date the most up-to-date version of this record was loaded into the table
    --created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

INSERT INTO staging.fdic_financials_temp (
    WITH cte1 AS (
        SELECT
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            scraped_at,
            -- get scraped_at and convert to YYYYMMDD format
            to_char(scraped_at, 'YYYYMMDD') AS day_scraped_at
        FROM raw.fdic_institutions
    ),

    -- staging will contain one version of each institution for whatever date it was scraped on
    cte2 AS (
        SELECT
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            day_scraped_at AS scraped_at,
        FROM cte1
        GROUP BY
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            day_scraped_at
    ),

    SELECT
        cert::NUMERIC,
        name,
        total_assets::NUMERIC,
        total_deposits::NUMERIC,
        report_date,
        md5(
            cert::TEXT || name || total_assets::TEXT || total_deposits::TEXT || report_date || scraped_at
        ) AS dim_id,
        NOW()::TIMESTAMP WITH TIME ZONE AS loaded_at,
        scraped_at::DATE AS scraped_at
    FROM cte2
);
[2024-01-12T20:51:30.830+0000] {base.py:83} INFO - Using connection ID 'alpharank_de_eval' for task execution.
[2024-01-12T20:51:30.836+0000] {base.py:83} INFO - Using connection ID 'alpharank_de_eval' for task execution.
[2024-01-12T20:51:31.102+0000] {sql.py:432} INFO - Running statement: CREATE TABLE staging.fdic_financials_temp (
    -- pulling from raw.fdic_financials
    cert NUMERIC, -- FDIC Certificate Number
    name TEXT, -- `namefull`: Institution Name
    total_assets NUMERIC, -- `asset`: Total Assets
    total_deposits NUMERIC, -- `dep`: Total Deposits
    report_date TEXT, -- `repdte`: Quarterly Report Date
    dim_id TEXT PRIMARY KEY, -- MD5 hash of cert, name, total_assets, total_deposits, and report_date
    loaded_at TIMESTAMP WITH TIME ZONE -- The date the most up-to-date version of this record was loaded into the table
    --created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

INSERT INTO staging.fdic_financials_temp (
    WITH cte1 AS (
        SELECT
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            scraped_at,
            -- get scraped_at and convert to YYYYMMDD format
            to_char(scraped_at, 'YYYYMMDD') AS day_scraped_at
        FROM raw.fdic_institutions
    ),

    -- staging will contain one version of each institution for whatever date it was scraped on
    cte2 AS (
        SELECT
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            day_scraped_at AS scraped_at,
        FROM cte1
        GROUP BY
            cert,
            name,
            total_assets,
            total_deposits,
            report_date,
            day_scraped_at
    ),

    SELECT
        cert::NUMERIC,
        name,
        total_assets::NUMERIC,
        total_deposits::NUMERIC,
        report_date,
        md5(
            cert::TEXT || name || total_assets::TEXT || total_deposits::TEXT || report_date || scraped_at
        ) AS dim_id,
        NOW()::TIMESTAMP WITH TIME ZONE AS loaded_at,
        scraped_at::DATE AS scraped_at
    FROM cte2
);, parameters: None
[2024-01-12T20:51:31.202+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "FROM"
LINE 36:         FROM cte1
                 ^

[2024-01-12T20:51:31.214+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=fdic_ncua_staging, task_id=create_staging_fdic_financials_temp, execution_date=20240112T205129, start_date=20240112T205130, end_date=20240112T205131
[2024-01-12T20:51:31.240+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 106 for task create_staging_fdic_financials_temp (syntax error at or near "FROM"
LINE 36:         FROM cte1
                 ^
; 9608)
[2024-01-12T20:51:31.265+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-12T20:51:31.290+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
